<?xml version="1.0"?>
<package>
  <name>dodge_web_interface</name>
  <version>0.0.0</version>
  <description>The dodge_web_interface package</description>

  <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>web_video_server</run_depend>

  <export>

  </export>
</package>
